[package]
name = "treesome"
version = "0.1.0"
edition = "2021"

description = "A library for tree creation, manipulation, traversal and visualization."
authors = ["Pavel Pscheidl <pavel2@pscheidl.cz>"]
readme = "README.md"
repository = "https://github.com/Pscheidl/treesome"
license = "Apache-2.0"
keywords = ["tree", "trees", "btree"]
categories = ["data-structures"]
documentation = "https://docs.rs/treesome"

[dependencies]